--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4438,5 +4438,94 @@
     "CL_DV_OV_night_mode_setting_desc": "Намалете яркостта на екрана и/или светлината по време на планираните нощни часове.",
     "CL_DV_OV_door_lock_setting_desc": "Включването на заключването на вратата ще заключи вратата на вашата фурна.",
     "CL_CF_FM_one_day_left": "остава 1 ден",
-    "CL_CF_FM_x_item_selected": "*** избран артикул"
+    "CL_CF_FM_x_item_selected": "*** избран артикул",
+    "CL_SL_CM_progam_send_warning": "За съжаление програмата не може да изпрати, моля, включете устройството си, отворете дистанционното и опитайте отново.",
+    "CL_SL_CM_progam_start_warning": "За съжаление програмата не може да стартира, моля, включете устройството си, отворете дистанционното и опитайте отново.",
+    "CL_SL_CM_progam_sent_successfully": "Програмата е изпратена успешно!",
+    "CL_SL_CM_select_device_desc": "Моля, изберете устройството, което да използвате.",
+    "CL_DV_WM_Detergent_In_Use_key": "Детергент в употреба",
+    "CL_DV_RF_cleaning_mode": "Режим на почистване",
+    "CL_DV_RF_holiday_mode": "Ваканционен режим",
+    "CL_DV_RF_party_mode": "Парти режим",
+    "w_i_connect_scenario": "Какво представлява сценарият ConnectLife",
+    "w_i_smart_energy": "Какво е Smart Energy",
+    "smart_energy_l_m": "Научете повече за основните характеристики на Smart Energy",
+    "w_i_air_care": "Какво е Air Care",
+    "air_care_l_m": "Научете повече за основните характеристики на Air Care",
+    "w_i_smart_laundry": "Какво е Smart Laundry",
+    "smart_laundry_l_m": "Научете повече за основните характеристики на Smart Laundry",
+    "w_i_smart_kitchen": "Какво е Smart Kitchen",
+    "smart_kitchen_l_m": "Научете повече за основните характеристики на Smart Kitchen",
+    "w_i_smart_support": "Какво е Smart Support",
+    "smart_support_l_m": "Научете повече за основните характеристики на Smart Support",
+    "smart_energy_helps": "Smart Energy ви помага да наблюдавате и поддържате устройствата в енергийно ефективно състояние",
+    "smart_energy_helps_1": "1.Еко с едно щракване",
+    "smart_energy_helps_1_content": "Активен ECO режим на вашите уреди. Статистически анализира консумацията на енергия на устройството. Наблюдавайте данните за пестене на енергия и задайте цел за потребление на енергия.",
+    "smart_energy_helps_2": "2. Мониторинг на потреблението на енергия",
+    "smart_energy_helps_2_content": "Изчислете потреблението на енергия и вода за цялата къща на дневна, месечна и годишна база. можете също да видите статистиката за потреблението на отделните устройства, съотношението на потреблението на енергия на всяко устройство в рамките на избрания период, общото и индивидуалното потребление на енергия.",
+    "smart_energy_helps_3": "3. Енергиен асистент",
+    "smart_energy_helps_3_content": "Задайте цели за пестене на енергия и изпращайте известия до потребителите, когато зададените целеви стойности бъдат достигнати.",
+    "air_care_helps": "Air care има за цел да разреши интелигентния контрол на температурата, влажността и въздуха в цялата къща",
+    "air_care_helps_1": "1. Оценка на въздуха",
+    "air_care_helps_1_content": "Наблюдавайте състоянието на температурата и влажността на всяка стая в реално време и предоставяйте оценки на комфорта и напомняния въз основа на състоянието на въздуха",
+    "air_care_helps_2": "2. Оптимизация с едно кликване",
+    "air_care_helps_2_content": "Оптимизацията може да се стартира с едно кликване. Предлагаме пет различни схеми за оптимизация. Всеки режим на оптимизация може да се регулира според нуждите на потребителя, предоставяйки на потребителите персонализирани решения за оптимизация.",
+    "air_care_helps_3": "3.3D изглед на стаята",
+    "air_care_helps_3_content": "Следете състоянието и уредите в стаята си чрез детайлна 3D визуализация на вашия дом.",
+    "smart_laundry_key": "Интелигентно пране",
+    "smart_laundry_helps": "Smart Laundry предлага експертни съвети за пране, интуитивен асистент за пране и безпроблемно управление на препаратите, осигурявайки несравнимо изживяване при пране",
+    "smart_laundry_helps_1": "1. Персонализирано пране",
+    "smart_laundry_helps_1_content": "Персонализирани цикли, базирани на потребителски профили и предпочитания, с етикети за различни сезони, дейности на открито, грижи за бебето и др.",
+    "smart_laundry_helps_2": "2. Управление на детергентите",
+    "smart_laundry_helps_2_content": "Оптимизирайте рутинното си пране с Smart Home Laundry Assistant, автоматично разпознавайте марките перилни препарати и управлявайте дозировката във вашата пералня.",
+    "smart_laundry_helps_3": "3. Доклад за използване на пране",
+    "smart_laundry_helps_3_content": "Показва седмични, месечни и годишни отчети за използването от страна на потребителя на програмата за пране, както и месечното потребление на вода и електричество и почистване на барабана.",
+    "smart_kitchen_key": "Умна кухня",
+    "smart_kitchen_helps": "Smart Kitchen ви предоставя безпрецедентно интелигентно готварско изживяване, включително интелигентни рецепти, комбиниране на вина, асистенти за рецепти и управление на съставките, виното и напитките",
+    "smart_kitchen_helps_1": "1. Рецепта на главния готвач",
+    "smart_kitchen_helps_1_content": "Насладете се на майсторски рецепти с уникални вкусове, когато се готвят в различни фурни, които следват инструкциите за готвене на рецептата само с едно щракване.",
+    "smart_kitchen_helps_2": "2. Асистент за рецепти",
+    "smart_kitchen_helps_2_content": "Персонализирайте и генерирайте рецепти въз основа на вашите лични предпочитания, включително хранене, кухни, начин на живот и алергии.",
+    "smart_kitchen_helps_3": "3. Управление на храните",
+    "smart_kitchen_helps_3_content": "Добавете и прегледайте подробности за често използвани съставки, като срок на годност. Бързо съпоставете подходящи рецепти за храна и изпратите липсващите съставки в списъка за пазаруване.",
+    "smart_kitchen_helps_4": "Управление на напитките",
+    "smart_kitchen_helps_4_content": "Добавете напитки и създайте списък за пиене, вижте подробна информация за всяко едно съхранено пиене.",
+    "smart_kitchen_helps_5": "Винен инвентар",
+    "smart_kitchen_helps_5_content": "Сканирайте, за да създадете списък с винарски изби от VIvino, задайте напомняния за оптимален период на пиене и препоръчайте съчетаване на храна въз основа на вида вино.",
+    "smart_kitchen_helps_6": "6. Списък за пазаруване",
+    "smart_kitchen_helps_6_content": "Генерирайте списъка за пазаруване въз основа на рецептата, маркирайте артикулите, които вече притежавате и сте придобили като справка за пазаруване.",
+    "smart_support_key": "Интелигентна поддръжка",
+    "smart_support_helps": "Smart Support предоставя цялостна помощ за вашите устройства. Можете да получите съвети за почистване и грижа за ежедневна поддръжка, самодиагностика с едно щракване, за да проверите състоянието на всичките си устройства и да предоставите възможни решения за всякакви необичайни операции",
+    "smart_support_helps_1": "1. Съвети за почистване и поддръжка",
+    "smart_support_helps_1_content": "Дайте предложения за ежедневно почистване и поддръжка на продукта.",
+    "smart_support_helps_2": "2. Самодиагностика с едно кликване",
+    "smart_support_helps_2_content": "Самопроверка с едно кликване, за да разберете състоянието на всички домакински уреди. Когато бъде открит проблем, дайте препоръчани решения.",
+    "smart_support_helps_3": "Отстраняване на неизправности",
+    "smart_support_helps_3_content": "Когато устройството има проблем, потребителите могат да си помогнат сами, да отстранят проблема и да разрешат проблема според ръководството за грешки.",
+    "smart_support_helps_4": "4.Докладвайте за проблем",
+    "smart_support_helps_4_content": "Ако има проблеми с приложението или използването на продукта, потребителите могат да дадат обратна връзка онлайн, за да намалят времето за комуникация с кол центъра.",
+    "smart_support_helps_5": "5. Свържете се с нас",
+    "smart_support_helps_5_content": "Потребителите могат да се свържат с нас чрез телефон, имейл и официален уебсайт.",
+    "block_key": "Блокирайте",
+    "guide_tips_device_1": "Това е <b> новият раздел на началната страница. </b>",
+    "guide_tips_device_2": "Можете да щракнете върху \" : \", за да редактирате поръчката, да я покажете или скриете.",
+    "guide_tips_device_3": "Можете да натиснете дълго картата, за да я изтриете или редактирате.",
+    "guide_tips_device_4": "Можете да изпитате <b> персонализирани карти със сценарии. </b>",
+    "guide_tips_device_5": "Можете да намерите настройката на началния раздел в <b> персонализиране на външния вид </b> на страницата с менюто",
+    "guide_tips_1": "ConnectLife стартира <b> пет сценария. </b>",
+    "guide_tips_2": "Можете да щракнете върху „:“, за да редактирате реда на секциите",
+    "guide_tips_3": "Можете да плъзнете \"=\", за да промените реда на секциите на началната страница.",
+    "c_your_device": "Свържете\nвашите устройства",
+    "a_ex_new_way": "и изпитайте нов начин на интелигентен живот.",
+    "my_place": "Моето място",
+    "home_tab": "Раздел Начална страница",
+    "home_tab_content": "Показване или скриване на раздела със сценарии в горната част на началната страница",
+    "CL_DV_RF_extras": "Екстри",
+    "CL_DV_OV_celsius_o_grill_plate": "ЦЕЛЗИЙ° ГРИЛ ПЛОЧА",
+    "CL_DV_OV_celsius_o_grill_plate_desc": "Грил плочата Celsius° позволява перфектно печене на месо, зеленчуци и риба. Задайте предпочитания от вас интензитет за прецизен контрол върху текстурата и вкуса.",
+    "CL_DV_WM_no_drain": "Без дренаж",
+    "CL_DV_WM_minimum_rpm": "Минимални обороти",
+    "CL_DV_WM_medium_rpm": "Средни обороти",
+    "CL_DV_WM_maximum_rpm": "Максимални обороти",
+    "CL_CF_CS_connect_to_wifi": "Следвайте тези стъпки, за да свържете устройството към Wi-Fi. Препоръчваме да деактивирате мрежовите данни на вашия смартфон."
 }
