--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4158,7 +4158,7 @@
     "CL_DV_WM_autodoes_tip": "Povolte tuto funkci a vaše zařízení bude během praní chytře dávkovat prací prostředek a aviváž.",
     "CL_DV_WM_detergent_department_key": "PŘIHRÁDKA NA PRACÍ PROSTŘEDEK",
     "CL_DV_WM_Dosage_Amount_key": "Dávka Množství",
-    "CL_DV_WM_softener_department_key": "PŘIHRÁDKA NA ZMěkčovač",
+    "CL_DV_WM_softener_department_key": "Přihr. změk. prostř.",
     "CL_DV_WM_auto_does_with_detergent": "Automatické dávkování s detergentem",
     "CL_DV_WM_same_detergent": "Stejný prací prostředek",
     "CL_DV_WM_normal_dosage_weight_tip": "Normální dávkování: 4~5 kg hmotnosti oblečení.",
@@ -4438,5 +4438,94 @@
     "CL_DV_OV_night_mode_setting_desc": "Snížit jas obrazovky a/nebo světlo během plánovaných nočních hodin.",
     "CL_DV_OV_door_lock_setting_desc": "Zapnutím zámku dvířek uzamknete dvířka vaší trouby.",
     "CL_CF_FM_one_day_left": "Zbývá 1 den",
-    "CL_CF_FM_x_item_selected": "*** vybrána položka"
+    "CL_CF_FM_x_item_selected": "*** vybrána položka",
+    "CL_SL_CM_progam_send_warning": "Litujeme, program nelze odeslat, zapněte prosím zařízení, otevřete dálkové ovládání a zkuste to znovu.",
+    "CL_SL_CM_progam_start_warning": "Litujeme, program nelze spustit, zapněte prosím zařízení, otevřete dálkové ovládání a zkuste to znovu.",
+    "CL_SL_CM_progam_sent_successfully": "Program byl úspěšně odeslán!",
+    "CL_SL_CM_select_device_desc": "Vyberte zařízení, které chcete použít.",
+    "CL_DV_WM_Detergent_In_Use_key": "Používá se detergent",
+    "CL_DV_RF_cleaning_mode": "Režim čištění",
+    "CL_DV_RF_holiday_mode": "Prázdninový režim",
+    "CL_DV_RF_party_mode": "Párty režim",
+    "w_i_connect_scenario": "Co je scénář ConnectLife",
+    "w_i_smart_energy": "Co je Smart Energy",
+    "smart_energy_l_m": "Zjistěte více o klíčových funkcích Smart Energy",
+    "w_i_air_care": "Co je Air Care",
+    "air_care_l_m": "Zjistěte více o klíčových funkcích Air Care",
+    "w_i_smart_laundry": "Co je Smart Laundry",
+    "smart_laundry_l_m": "Zjistěte více o klíčových funkcích Smart Laundry",
+    "w_i_smart_kitchen": "Co je chytrá kuchyně",
+    "smart_kitchen_l_m": "Zjistěte více o klíčových funkcích chytré kuchyně",
+    "w_i_smart_support": "Co je chytrá podpora",
+    "smart_support_l_m": "Přečtěte si další informace o klíčových funkcích Smart Support",
+    "smart_energy_helps": "Smart Energy vám pomůže monitorovat a udržovat zařízení v energeticky úsporném stavu",
+    "smart_energy_helps_1": "1.Eko jedním kliknutím",
+    "smart_energy_helps_1_content": "Aktivní ECO režim vašich spotřebičů. Statisticky analyzujte spotřebu energie zařízení. Sledujte údaje o úspoře energie a nastavte cíl spotřeby energie.",
+    "smart_energy_helps_2": "2. Monitorování spotřeby energie",
+    "smart_energy_helps_2_content": "Spočítejte si spotřebu energie a vody v celém domě na denní, měsíční a roční bázi. můžete si také prohlédnout statistiky spotřeby jednotlivých zařízení, podíl spotřeby energie každého zařízení ve zvoleném období, celkovou a individuální spotřebu energie.",
+    "smart_energy_helps_3": "3.Energetický asistent",
+    "smart_energy_helps_3_content": "Stanovte si cíle v oblasti úspory energie a zasílejte uživatelům upozornění, když budou dosaženy nastavené cílové hodnoty.",
+    "air_care_helps": "Péče o vzduch má za cíl vyřešit inteligentní řízení teploty, vlhkosti a vzduchu v celém domě",
+    "air_care_helps_1": "1.Vyhodnocení ovzduší",
+    "air_care_helps_1_content": "Sledujte stav teploty a vlhkosti v každé místnosti v reálném čase a poskytujte vyhodnocení komfortu a připomenutí na základě klimatizace",
+    "air_care_helps_2": "2.Optimalizace jedním kliknutím",
+    "air_care_helps_2_content": "Optimalizaci lze spustit jedním kliknutím. Nabízíme pět různých optimalizačních schémat. Každý režim optimalizace lze upravit podle potřeb uživatele a poskytnout uživatelům přizpůsobená optimalizační řešení.",
+    "air_care_helps_3": "3.3D pohled na místnost",
+    "air_care_helps_3_content": "Sledujte stav svého pokoje a spotřebiče prostřednictvím podrobné 3D vizualizace vašeho domova.",
+    "smart_laundry_key": "Chytrá prádelna",
+    "smart_laundry_helps": "Smart Laundry nabízí odborné tipy pro praní, intuitivního pomocníka při praní a bezproblémovou správu pracích prostředků, což zajišťuje jedinečný zážitek z praní",
+    "smart_laundry_helps_1": "1. Prádelna na zakázku",
+    "smart_laundry_helps_1_content": "Personalizované cykly založené na uživatelských profilech a preferencích, se štítky pro různá roční období, outdoorové aktivity, péči o miminko a další.",
+    "smart_laundry_helps_2": "2. Management detergentů",
+    "smart_laundry_helps_2_content": "Optimalizujte své praní pomocí Smart Home Laundry Assistant, automaticky rozpoznávejte značky pracích prostředků a spravujte dávkování ve vaší pračce.",
+    "smart_laundry_helps_3": "3. Zpráva o používání prádelny",
+    "smart_laundry_helps_3_content": "Zobrazuje týdenní, měsíční a roční zprávy o používání pracího programu uživatelem, stejně jako měsíční spotřebu vody a elektřiny a čištění bubnu.",
+    "smart_kitchen_key": "Chytrá kuchyně",
+    "smart_kitchen_helps": "Smart Kitchen vám poskytuje bezprecedentní inteligentní zážitek z vaření, včetně inteligentních receptů, párování vín, asistentů receptů a správy přísad, vína a nápojů.",
+    "smart_kitchen_helps_1": "1.Recept šéfkuchaře",
+    "smart_kitchen_helps_1_content": "Vyzkoušejte mistrovské recepty v jedinečných příchutích při vaření v různých pecích, které se řídí pokyny pro vaření jediným kliknutím.",
+    "smart_kitchen_helps_2": "2.Asistent receptů",
+    "smart_kitchen_helps_2_content": "Přizpůsobte a vytvářejte recepty na základě vašich osobních preferencí, včetně výživy, kuchyně, životního stylu a alergií.",
+    "smart_kitchen_helps_3": "3. Food Management",
+    "smart_kitchen_helps_3_content": "Přidejte a zobrazte podrobnosti o často používaných ingrediencích, jako je datum expirace. Rychle přiřaďte vhodné receptury potravin a odešlete chybějící ingredience do nákupního seznamu.",
+    "smart_kitchen_helps_4": "Hospodaření s nápoji",
+    "smart_kitchen_helps_4_content": "Přidejte nápoje a vytvořte si nápojový lístek, zobrazte podrobné informace o každém uloženém pití.",
+    "smart_kitchen_helps_5": "Víno inventář",
+    "smart_kitchen_helps_5_content": "Skenováním vytvořte seznam vinných sklepů od VIvino, nastavte si připomenutí pro optimální dobu pití a doporučte párování jídel podle typu vína.",
+    "smart_kitchen_helps_6": "6.Nákupní seznam",
+    "smart_kitchen_helps_6_content": "Vytvořte nákupní seznam na základě receptu, označte položky, které již vlastníte a které jste získali, jako nákupní referenci.",
+    "smart_support_key": "Chytrá podpora",
+    "smart_support_helps": "Smart Support poskytuje komplexní pomoc pro vaše zařízení. Můžete získat tipy na čištění a péči pro každodenní údržbu, autodiagnostiku jedním kliknutím pro kontrolu stavu všech vašich zařízení a poskytnutí možných řešení pro jakékoli abnormální operace.",
+    "smart_support_helps_1": "1. Tipy pro čištění a údržbu",
+    "smart_support_helps_1_content": "Poskytněte návrhy pro každodenní čištění a údržbu produktu.",
+    "smart_support_helps_2": "2. Vlastní Dignosis jedním kliknutím",
+    "smart_support_helps_2_content": "Samokontrola na jedno kliknutí pro pochopení stavu všech domácích spotřebičů. Když je zjištěn problém, poskytněte doporučená řešení.",
+    "smart_support_helps_3": "Odstraňování problémů",
+    "smart_support_helps_3_content": "Když má zařízení problém, uživatelé si mohou sami pomoci, odstraňovat problémy a řešit problém podle průvodce poruchami.",
+    "smart_support_helps_4": "4. Nahlásit problém",
+    "smart_support_helps_4_content": "Pokud se vyskytnou problémy s používáním aplikace nebo produktu, mohou uživatelé získat zpětnou vazbu online, aby se zkrátila doba komunikace s call centrem.",
+    "smart_support_helps_5": "5. Kontaktujte nás",
+    "smart_support_helps_5_content": "Uživatelé nás mohou kontaktovat prostřednictvím telefonu, e-mailu a oficiálních webových stránek.",
+    "block_key": "Blok",
+    "guide_tips_device_1": "Toto je <b> nová karta domovské stránky. </b>",
+    "guide_tips_device_2": "Kliknutím na \" : \" můžete objednávku upravit, zobrazit nebo skrýt.",
+    "guide_tips_device_3": "Kartu můžete dlouhým stisknutím smazat nebo upravit.",
+    "guide_tips_device_4": "Můžete zažít <b> přizpůsobené karty scénáře. </b>",
+    "guide_tips_device_5": "Nastavení domovské karty naleznete v části <b> přizpůsobení vzhledu </b> na stránce nabídky",
+    "guide_tips_1": "ConnectLife spustil <b> pět scénářů. </b>",
+    "guide_tips_2": "Kliknutím na „:“ upravíte pořadí sekcí",
+    "guide_tips_3": "Přetažením \"=\" můžete změnit pořadí sekcí na domovské stránce.",
+    "c_your_device": "Připojte\nvaše zařízení",
+    "a_ex_new_way": "a zažijte nový způsob chytrého bydlení.",
+    "my_place": "moje místo",
+    "home_tab": "Karta Domovská stránka",
+    "home_tab_content": "Zobrazit nebo skrýt kartu scénáře v horní části domovské stránky",
+    "CL_DV_RF_extras": "Extra",
+    "CL_DV_OV_celsius_o_grill_plate": "CELSIUS° GRILOVACÍ DESKA",
+    "CL_DV_OV_celsius_o_grill_plate_desc": "Grilovací deska Celsius° umožňuje dokonalé grilování masa, zeleniny a ryb. Nastavte preferovanou intenzitu pro přesnou kontrolu nad texturou a chutí.",
+    "CL_DV_WM_no_drain": "Bez odtoku",
+    "CL_DV_WM_minimum_rpm": "Minimální otáčky",
+    "CL_DV_WM_medium_rpm": "Střední otáčky",
+    "CL_DV_WM_maximum_rpm": "Maximální otáčky",
+    "CL_CF_CS_connect_to_wifi": "Pro připojení zařízení k Wi-Fi postupujte podle následujících kroků. Doporučujeme deaktivovat síťová data na vašem smartphonu."
 }
