--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4158,7 +4158,7 @@
     "CL_DV_WM_autodoes_tip": "Activez cette fonction et votre appareil distribuera intelligemment du détergent et de l'assouplissant pendant que vous faites votre lessive.",
     "CL_DV_WM_detergent_department_key": "COMPARTIMENT À DÉTERGENT",
     "CL_DV_WM_Dosage_Amount_key": "Quantité de dosage",
-    "CL_DV_WM_softener_department_key": "COMPARTIMENT ADOUCISSANT",
+    "CL_DV_WM_softener_department_key": "Bac Assouplissant",
     "CL_DV_WM_auto_does_with_detergent": "Autodose avec détergent",
     "CL_DV_WM_same_detergent": "Même détergent",
     "CL_DV_WM_normal_dosage_weight_tip": "Dosage normal : 4 à 5 kg de poids de vêtements.",
@@ -4438,5 +4438,94 @@
     "CL_DV_OV_night_mode_setting_desc": "Réduisez la luminosité de l'écran et/ou de la lumière pendant les heures nocturnes programmées.",
     "CL_DV_OV_door_lock_setting_desc": "L'activation du verrouillage de la porte verrouillera la porte de votre four.",
     "CL_CF_FM_one_day_left": "Il reste 1 jour",
-    "CL_CF_FM_x_item_selected": "*** élément sélectionné"
+    "CL_CF_FM_x_item_selected": "*** élément sélectionné",
+    "CL_SL_CM_progam_send_warning": "Désolé, le programme ne peut pas envoyer, veuillez allumer votre appareil et ouvrir la télécommande et réessayer.",
+    "CL_SL_CM_progam_start_warning": "Désolé, le programme ne peut pas démarrer, veuillez allumer votre appareil et ouvrir la télécommande et réessayer.",
+    "CL_SL_CM_progam_sent_successfully": "Programme envoyé avec succès !",
+    "CL_SL_CM_select_device_desc": "Veuillez sélectionner l'appareil à utiliser.",
+    "CL_DV_WM_Detergent_In_Use_key": "Détergent en cours d'utilisation",
+    "CL_DV_RF_cleaning_mode": "Mode de nettoyage",
+    "CL_DV_RF_holiday_mode": "Mode vacances",
+    "CL_DV_RF_party_mode": "Mode fête",
+    "w_i_connect_scenario": "Qu'est-ce que le scénario ConnectLife",
+    "w_i_smart_energy": "Qu'est-ce que l'énergie intelligente",
+    "smart_energy_l_m": "En savoir plus sur les principales fonctionnalités de Smart Energy",
+    "w_i_air_care": "Qu'est-ce que Air Care",
+    "air_care_l_m": "En savoir plus sur les principales fonctionnalités d'Air Care",
+    "w_i_smart_laundry": "Qu'est-ce que Smart Laundry",
+    "smart_laundry_l_m": "En savoir plus sur les principales fonctionnalités de Smart Laundry",
+    "w_i_smart_kitchen": "Qu'est-ce que Smart Kitchen",
+    "smart_kitchen_l_m": "En savoir plus sur les principales fonctionnalités de Smart Kitchen",
+    "w_i_smart_support": "Qu'est-ce que Smart Support",
+    "smart_support_l_m": "En savoir plus sur les principales fonctionnalités de Smart Support",
+    "smart_energy_helps": "Smart Energy vous aide à surveiller et à maintenir les appareils dans un état d'efficacité énergétique",
+    "smart_energy_helps_1": "1. Éco en un clic",
+    "smart_energy_helps_1_content": "Activez le mode ECO de vos appareils. Analysez statistiquement la consommation énergétique des appareils. Surveillez les données d'économie d'énergie et définissez un objectif de consommation d'énergie.",
+    "smart_energy_helps_2": "2. Suivi de la consommation énergétique",
+    "smart_energy_helps_2_content": "Calculez la consommation d'électricité et d'eau de toute la maison sur une base quotidienne, mensuelle et annuelle. Vous pouvez également consulter les statistiques de consommation des appareils individuels, la proportion de consommation d'énergie de chaque appareil au cours de la période sélectionnée, la consommation d'énergie globale et individuelle.",
+    "smart_energy_helps_3": "3.Assistant énergétique",
+    "smart_energy_helps_3_content": "Définissez des objectifs d’économie d’énergie et envoyez des notifications aux utilisateurs lorsque les valeurs cibles définies sont atteintes.",
+    "air_care_helps": "Air Care vise à résoudre le contrôle intelligent de la température, de l'humidité et de l'air dans toute la maison",
+    "air_care_helps_1": "1. Évaluation de l'air",
+    "air_care_helps_1_content": "Surveillez l'état de température et d'humidité de chaque pièce en temps réel et fournissez des évaluations de confort et des rappels en fonction de la climatisation",
+    "air_care_helps_2": "2. Optimisation en un clic",
+    "air_care_helps_2_content": "L'optimisation peut être lancée en un seul clic. Nous proposons cinq schémas d'optimisation différents. Chaque mode d'optimisation peut être ajusté en fonction des besoins de l'utilisateur, offrant ainsi aux utilisateurs des solutions d'optimisation personnalisées.",
+    "air_care_helps_3": "Vue de la pièce 3.3D",
+    "air_care_helps_3_content": "Gardez un œil sur l'état de votre pièce et de vos appareils grâce à une visualisation 3D détaillée de votre maison.",
+    "smart_laundry_key": "Blanchisserie intelligente",
+    "smart_laundry_helps": "Smart Laundry propose des conseils de lavage d'experts, un assistant de lessive intuitif et une gestion transparente des détergents, garantissant une expérience de lessive inégalée",
+    "smart_laundry_helps_1": "1. Blanchisserie personnalisée",
+    "smart_laundry_helps_1_content": "Cycles personnalisés en fonction des profils et des préférences des utilisateurs, avec des balises pour différentes saisons, activités de plein air, soins de bébé, etc.",
+    "smart_laundry_helps_2": "2. Gestion des détergents",
+    "smart_laundry_helps_2_content": "Optimisez votre routine de lessive avec Smart Home Laundry Assistant, reconnaissez automatiquement les marques de détergent et gérez le dosage dans votre machine à laver.",
+    "smart_laundry_helps_3": "3. Rapport d'utilisation du linge",
+    "smart_laundry_helps_3_content": "Affiche des rapports hebdomadaires, mensuels et annuels sur l'utilisation du programme de lessive par l'utilisateur, ainsi que sur la consommation mensuelle d'eau et d'électricité et le nettoyage du tambour.",
+    "smart_kitchen_key": "Cuisine intelligente",
+    "smart_kitchen_helps": "Smart Kitchen vous offre une expérience de cuisine intelligente sans précédent, comprenant des recettes intelligentes, des accords mets et vins, des assistants de recettes et une gestion des ingrédients, des vins et des boissons",
+    "smart_kitchen_helps_1": "1.Recette du chef",
+    "smart_kitchen_helps_1_content": "Découvrez des recettes de maître aux saveurs uniques cuites dans différents fours, qui suivent les instructions de cuisson de la recette en un seul clic.",
+    "smart_kitchen_helps_2": "2. Assistant de recettes",
+    "smart_kitchen_helps_2_content": "Personnalisez et générez des recettes en fonction de vos préférences personnelles, notamment en matière de nutrition, de cuisine, de style de vie et d'allergies.",
+    "smart_kitchen_helps_3": "3. Gestion alimentaire",
+    "smart_kitchen_helps_3_content": "Ajoutez et consultez les détails des ingrédients fréquemment utilisés, tels que la date d'expiration. Associez rapidement des recettes alimentaires adaptées et envoyez les ingrédients manquants à la liste de courses.",
+    "smart_kitchen_helps_4": "Gestion des boissons",
+    "smart_kitchen_helps_4_content": "Ajoutez des boissons et créez une liste de boissons, affichez des informations détaillées sur chaque boisson enregistrée.",
+    "smart_kitchen_helps_5": "Vin inventaire",
+    "smart_kitchen_helps_5_content": "Scannez pour créer une liste de cave à vin par VIvino, définissez des rappels pour une période de consommation optimale et recommandez des accords mets et vins en fonction du type de vin.",
+    "smart_kitchen_helps_6": "6. Liste de courses",
+    "smart_kitchen_helps_6_content": "Générez la liste de courses en fonction de la recette, marquez les articles que vous possédez déjà et acquis comme référence d'achat.",
+    "smart_support_key": "Assistance intelligente",
+    "smart_support_helps": "Smart Support vous offre une assistance complète pour vos appareils. Vous pouvez obtenir des conseils de nettoyage et d'entretien pour la maintenance quotidienne, un autodiagnostic en un clic pour vérifier l'état de tous vos appareils et proposer des solutions possibles en cas de fonctionnement anormal",
+    "smart_support_helps_1": "1. Conseils de nettoyage et d'entretien",
+    "smart_support_helps_1_content": "Donnez des suggestions pour le nettoyage et l’entretien quotidien du produit.",
+    "smart_support_helps_2": "2. Autodiagnostic en un clic",
+    "smart_support_helps_2_content": "Auto-inspection en un clic pour connaître l'état de tous les appareils électroménagers. Lorsqu'un problème est détecté, fournissez des solutions recommandées.",
+    "smart_support_helps_3": "Dépannage",
+    "smart_support_helps_3_content": "Lorsque l'appareil rencontre un problème, les utilisateurs peuvent s'auto-aider, dépanner et résoudre le problème en suivant le guide des pannes.",
+    "smart_support_helps_4": "4.Signaler un problème",
+    "smart_support_helps_4_content": "En cas de problèmes avec l'application ou l'utilisation du produit, les utilisateurs peuvent donner leur avis en ligne pour réduire le temps de communication avec le centre d'appels.",
+    "smart_support_helps_5": "5. Contactez-nous",
+    "smart_support_helps_5_content": "Les utilisateurs peuvent nous contacter par téléphone, e-mail et site Web officiel.",
+    "block_key": "Bloc",
+    "guide_tips_device_1": "Il s'agit du <b> nouvel onglet de la page d'accueil. </b>",
+    "guide_tips_device_2": "Vous pouvez cliquer sur « : » pour modifier la commande, afficher ou masquer.",
+    "guide_tips_device_3": "Vous pouvez appuyer longuement sur la carte pour la supprimer ou la modifier.",
+    "guide_tips_device_4": "Vous pouvez découvrir <b> cartes de </b> personnalisées.",
+    "guide_tips_device_5": "Vous pouvez trouver le paramètre de l'onglet d'accueil dans <b> Personnaliser l'apparence </b> sur la page de menu",
+    "guide_tips_1": "ConnectLife a lancé <b> cinq scénarios. </b>",
+    "guide_tips_2": "Vous pouvez cliquer sur « : » pour modifier l'ordre des sections",
+    "guide_tips_3": "Vous pouvez faire glisser le « = » pour modifier l’ordre des sections sur la page d’accueil.",
+    "c_your_device": "Connectez\nvos appareils",
+    "a_ex_new_way": "et découvrez une nouvelle façon de vivre intelligemment.",
+    "my_place": "Mon endroit",
+    "home_tab": "Onglet de la page d'accueil",
+    "home_tab_content": "Afficher ou masquer l'onglet scénarios en haut de la page d'accueil",
+    "CL_DV_RF_extras": "Suppléments",
+    "CL_DV_OV_celsius_o_grill_plate": "PLAQUE GRIL CELSIUS°",
+    "CL_DV_OV_celsius_o_grill_plate_desc": "La plaque de cuisson à intensité Celsius° permet de griller parfaitement les viandes, les légumes et le poisson. Réglez l'intensité souhaitée pour un contrôle précis de la texture et de la saveur.",
+    "CL_DV_WM_no_drain": "Pas de vidange",
+    "CL_DV_WM_minimum_rpm": "Régime minimum",
+    "CL_DV_WM_medium_rpm": "Régime moyen",
+    "CL_DV_WM_maximum_rpm": "Régime maximal",
+    "CL_CF_CS_connect_to_wifi": "Suivez ces étapes pour connecter l'appareil au Wi-Fi. Nous vous recommandons de désactiver les données réseau sur votre smartphone."
 }
