--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4438,5 +4438,94 @@
     "CL_DV_OV_night_mode_setting_desc": "Намалете јасност на екранот и/или светлина за време на закажаните ноќни часови.",
     "CL_DV_OV_door_lock_setting_desc": "Вклучувањето на бравата на вратата ќе ја заклучи вратата од вашата рерна.",
     "CL_CF_FM_one_day_left": "Остана уште 1 ден",
-    "CL_CF_FM_x_item_selected": "Избрана е *** ставка"
+    "CL_CF_FM_x_item_selected": "Избрана е *** ставка",
+    "CL_SL_CM_progam_send_warning": "За жал, програмата не може да испрати, ве молиме вклучете го вашиот уред и отворете го далечинското и обидете се повторно.",
+    "CL_SL_CM_progam_start_warning": "За жал, програмата не може да започне, вклучете го вашиот уред и отворете го далечинското и обидете се повторно.",
+    "CL_SL_CM_progam_sent_successfully": "Програмата е успешно испратена!",
+    "CL_SL_CM_select_device_desc": "Ве молиме изберете го уредот што ќе се користи.",
+    "CL_DV_WM_Detergent_In_Use_key": "Детергент во употреба",
+    "CL_DV_RF_cleaning_mode": "Режим на чистење",
+    "CL_DV_RF_holiday_mode": "Режим на одмор",
+    "CL_DV_RF_party_mode": "Режим на забава",
+    "w_i_connect_scenario": "Што е сценариото на ConnectLife",
+    "w_i_smart_energy": "Што е паметна енергија",
+    "smart_energy_l_m": "Дознајте повеќе за клучните карактеристики на Smart Energy",
+    "w_i_air_care": "Што е нега на воздух",
+    "air_care_l_m": "Дознајте повеќе за клучните карактеристики на Air Care",
+    "w_i_smart_laundry": "Што е паметно перење",
+    "smart_laundry_l_m": "Дознајте повеќе за клучните карактеристики на Smart Laundry",
+    "w_i_smart_kitchen": "Што е паметна кујна",
+    "smart_kitchen_l_m": "Дознајте повеќе за клучните карактеристики на Smart Kitchen",
+    "w_i_smart_support": "Што е паметна поддршка",
+    "smart_support_l_m": "Дознајте повеќе за клучните карактеристики на Smart Support",
+    "smart_energy_helps": "Smart Energy ви помага да ги следите и одржувате уредите во енергетска ефикасна состојба",
+    "smart_energy_helps_1": "1. Еко со еден клик",
+    "smart_energy_helps_1_content": "Активен ЕКО режим на вашите апарати. Статистички анализирајте ја потрошувачката на енергија на уредот. Следете ги податоците за заштеда на енергија и поставете цел за користење на енергија.",
+    "smart_energy_helps_2": "2.Следење на потрошувачката на енергија",
+    "smart_energy_helps_2_content": "Пресметајте ја потрошувачката на енергија и вода во целата куќа на дневна, месечна и годишна основа. исто така можете да ја видите статистиката за потрошувачка на поединечни уреди, процентот на потрошувачка на енергија на секој уред во избраниот период, вкупната и индивидуалната потрошувачка на енергија.",
+    "smart_energy_helps_3": "3.Енергетски асистент",
+    "smart_energy_helps_3_content": "Поставете цели за заштеда на енергија и испраќајте известувања до корисниците кога ќе се постигнат поставените целни вредности.",
+    "air_care_helps": "Нега на воздухот има за цел да ја реши интелигентната контрола на температурата, влажноста и воздухот во целата куќа",
+    "air_care_helps_1": "1. Евалуација на воздухот",
+    "air_care_helps_1_content": "Следете ја состојбата на температурата и влажноста на секоја соба во реално време и обезбедете проценки за удобност и потсетници врз основа на климатизацијата",
+    "air_care_helps_2": "2.Оптимизација со еден клик",
+    "air_care_helps_2_content": "Оптимизацијата може да се започне со еден клик. Обезбедуваме пет различни шеми за оптимизација. Секој режим на оптимизација може да се прилагоди според потребите на корисниците, обезбедувајќи им на корисниците приспособени решенија за оптимизација.",
+    "air_care_helps_3": "3.3D поглед на собата",
+    "air_care_helps_3_content": "Внимавајте на статусот и уредите на вашата соба преку детална 3D визуелизација на вашиот дом.",
+    "smart_laundry_key": "Паметно перење",
+    "smart_laundry_helps": "Smart Laundry нуди стручни совети за перење, интуитивен асистент за перење и непречено управување со детергентот, обезбедувајќи неспоредливо искуство при перење",
+    "smart_laundry_helps_1": "1.Прилагодено перење",
+    "smart_laundry_helps_1_content": "Персонализирани циклуси засновани на кориснички профили и преференци, со ознаки за различни сезони, активности на отворено, нега на бебиња и многу повеќе.",
+    "smart_laundry_helps_2": "2. Управување со детергент",
+    "smart_laundry_helps_2_content": "Оптимизирајте ја вашата рутина за перење алишта со Smart Home Laundry Assistant, автоматски ги препознава брендовите на детергенти и управувајте со дозата во вашата машина за перење.",
+    "smart_laundry_helps_3": "3.Извештај за употреба на алишта",
+    "smart_laundry_helps_3_content": "Прикажува неделни, месечни и годишни извештаи за користењето на програмата за перење алишта од страна на корисникот, како и месечната потрошувачка на вода и електрична енергија и чистење на барабанот.",
+    "smart_kitchen_key": "Паметна кујна",
+    "smart_kitchen_helps": "Smart Kitchen ви овозможува невидено интелигентно искуство за готвење, вклучувајќи интелигентни рецепти, парови на вино, помошници за рецепти и управување со состојки, вино и пијалоци",
+    "smart_kitchen_helps_1": "1. Рецепт за готвач",
+    "smart_kitchen_helps_1_content": "Искусете ги мајсторските рецепти во уникатни вкусови кога се готват во различни рерни, кои ги следат упатствата за готвење на рецептот со само еден клик.",
+    "smart_kitchen_helps_2": "2.Помошник за рецепти",
+    "smart_kitchen_helps_2_content": "Прилагодете ги и генерирајте рецепти засновани на вашите лични преференци, вклучувајќи исхрана, кујни, начин на живот и алергии.",
+    "smart_kitchen_helps_3": "3. Управување со храна",
+    "smart_kitchen_helps_3_content": "Додадете и прегледувајте ги деталите за често користените состојки како што е датумот на истекување. Брзо усогласете ги соодветните рецепти за храна и испратете ги состојките што недостасуваат на списокот за купување.",
+    "smart_kitchen_helps_4": "Управување со пијалоци",
+    "smart_kitchen_helps_4_content": "Додадете пијалоци и креирајте листа за пиење, прегледајте детални информации за секое складирано пиење.",
+    "smart_kitchen_helps_5": "Инвентар на вино",
+    "smart_kitchen_helps_5_content": "Скенирајте за да создадете список со винарска визба од VIvino, поставете потсетници за оптимален период на пиење и препорачајте спарување на храна врз основа на типот на вино.",
+    "smart_kitchen_helps_6": "6.Шопинг листа",
+    "smart_kitchen_helps_6_content": "Генерирајте го списокот за купување врз основа на рецептот, означете ги артиклите што веќе ги поседувате и сте ги купиле како ваша референца за купување.",
+    "smart_support_key": "Паметна поддршка",
+    "smart_support_helps": "Паметната поддршка обезбедува сеопфатна помош за вашите уреди. Може да добиете совети за чистење и нега за секојдневно одржување, самодијагностика со еден клик за да го проверите статусот на сите ваши уреди и да обезбедите можни решенија за какви било абнормални операции",
+    "smart_support_helps_1": "1. Совети за чистење и одржување",
+    "smart_support_helps_1_content": "Давајте предлози за секојдневно чистење и одржување на производот.",
+    "smart_support_helps_2": "2. Самодигноза со еден клик",
+    "smart_support_helps_2_content": "Само-инспекција со еден клик за да го сфатите статусот на сите апарати за домаќинство. Кога ќе се открие проблем, обезбедете препорачани решенија.",
+    "smart_support_helps_3": "Решавање проблеми",
+    "smart_support_helps_3_content": "Кога уредот има проблем, корисниците можат сами да помагаат, да го решат и решат проблемот според водичот за дефекти.",
+    "smart_support_helps_4": "4.Пријавете го проблемот",
+    "smart_support_helps_4_content": "Ако има проблеми со употребата на АПП или производот, корисниците можат да даваат повратни информации преку Интернет за да го намалат времето за комуникација со центарот за повици.",
+    "smart_support_helps_5": "5. Контактирајте со нас",
+    "smart_support_helps_5_content": "Корисниците можат да не контактираат преку телефон, е-пошта и официјална веб-страница.",
+    "block_key": "Блокирај",
+    "guide_tips_device_1": "Ова е <b> новото јазиче почетната страница. </b>",
+    "guide_tips_device_2": "Можете да кликнете на „ :“ за да ја уредите нарачката, да ја прикажете или сокриете.",
+    "guide_tips_device_3": "Можете долго да ја притиснете картичката за да ја избришете или уредите.",
+    "guide_tips_device_4": "Може да искусите <b> приспособени картички за сценарио. </b>",
+    "guide_tips_device_5": "Поставката за почетната картичка може да ја најдете на <b> приспособете го изгледот </b> на страницата од менито",
+    "guide_tips_1": "ConnectLife започна <b> пет сценарија. </b>",
+    "guide_tips_2": "Можете да кликнете на „:“ за да го уредите редоследот на секциите",
+    "guide_tips_3": "Можете да го повлечете „=\" за да го промените редоследот на секциите на почетната страница.",
+    "c_your_device": "Поврзете ги/nвашите уреди",
+    "a_ex_new_way": "и искусете нов начин на паметно живеење.",
+    "my_place": "Моето место",
+    "home_tab": "Картичка за почетна страница",
+    "home_tab_content": "Прикажи или скриј го табулаторот за сценарија на врвот на почетната страница",
+    "CL_DV_RF_extras": "Дополнителни",
+    "CL_DV_OV_celsius_o_grill_plate": "ЦЕЛЗИУСОВСКИ ПЛОЧИЊА ЗА СКАРА",
+    "CL_DV_OV_celsius_o_grill_plate_desc": "Плочата за скара Целзиусови° овозможува совршено печење месо, зеленчук и риба. Поставете го саканиот интензитет за прецизна контрола врз текстурата и вкусот.",
+    "CL_DV_WM_no_drain": "Нема одвод",
+    "CL_DV_WM_minimum_rpm": "Минимални вртежи во минута",
+    "CL_DV_WM_medium_rpm": "Средни вртежи во минута",
+    "CL_DV_WM_maximum_rpm": "Максимални вртежи во минута",
+    "CL_CF_CS_connect_to_wifi": "Следете ги овие чекори за да го поврзете уредот со Wi-Fi. Препорачуваме да ги оневозможите мрежните податоци на вашиот паметен телефон."
 }
