--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4438,5 +4438,94 @@
     "CL_DV_OV_night_mode_setting_desc": "Kurangkan kecerahan skrin dan/atau cahaya semasa waktu malam yang dirancang.",
     "CL_DV_OV_door_lock_setting_desc": "Menghidupkan kunci pintu akan mengunci pintu ketuhar anda.",
     "CL_CF_FM_one_day_left": "tinggal 1 hari lagi",
-    "CL_CF_FM_x_item_selected": "*** item dipilih"
+    "CL_CF_FM_x_item_selected": "*** item dipilih",
+    "CL_SL_CM_progam_send_warning": "Maaf, program tidak boleh menghantar, sila hidupkan peranti anda dan buka alat kawalan jauh dan cuba semula.",
+    "CL_SL_CM_progam_start_warning": "Maaf, program tidak boleh dimulakan, sila hidupkan peranti anda dan buka alat kawalan jauh dan cuba semula.",
+    "CL_SL_CM_progam_sent_successfully": "Program berjaya dihantar!",
+    "CL_SL_CM_select_device_desc": "Sila pilih peranti yang akan digunakan.",
+    "CL_DV_WM_Detergent_In_Use_key": "Detergen Digunakan",
+    "CL_DV_RF_cleaning_mode": "Mod pembersihan",
+    "CL_DV_RF_holiday_mode": "Mod cuti",
+    "CL_DV_RF_party_mode": "Mod parti",
+    "w_i_connect_scenario": "Apakah senario ConnectLife",
+    "w_i_smart_energy": "Apa itu Tenaga Pintar",
+    "smart_energy_l_m": "Ketahui lebih lanjut tentang ciri utama Tenaga Pintar",
+    "w_i_air_care": "Apakah Penjagaan Udara",
+    "air_care_l_m": "Ketahui lebih lanjut tentang ciri utama Penjagaan Udara",
+    "w_i_smart_laundry": "Apa itu Smart Laundry",
+    "smart_laundry_l_m": "Ketahui lebih lanjut tentang ciri utama Cucian Pintar",
+    "w_i_smart_kitchen": "Apa itu Smart Kitchen",
+    "smart_kitchen_l_m": "Ketahui lebih lanjut tentang ciri utama Dapur Pintar",
+    "w_i_smart_support": "Apakah itu Sokongan Pintar",
+    "smart_support_l_m": "Ketahui lebih lanjut tentang ciri utama Sokongan Pintar",
+    "smart_energy_helps": "Tenaga Pintar membantu anda memantau dan memastikan peranti dalam keadaan cekap tenaga",
+    "smart_energy_helps_1": "1.Eko Satu Klik",
+    "smart_energy_helps_1_content": "Mod ECO aktif peralatan anda. Analisis statistik penggunaan tenaga peranti. Pantau data penjimatan tenaga dan Tetapkan sasaran penggunaan tenaga.",
+    "smart_energy_helps_2": "2.Pemantauan Penggunaan Tenaga",
+    "smart_energy_helps_2_content": "Kira tenaga dan penggunaan air seluruh rumah pada asas harian, bulanan dan tahunan. anda juga boleh melihat statistik penggunaan peranti individu, perkadaran penggunaan tenaga setiap peranti dalam tempoh yang dipilih, penggunaan tenaga keseluruhan dan individu.",
+    "smart_energy_helps_3": "3.Pembantu Tenaga",
+    "smart_energy_helps_3_content": "Tetapkan matlamat penjimatan tenaga dan hantar pemberitahuan kepada pengguna apabila nilai sasaran yang ditetapkan tercapai.",
+    "air_care_helps": "Penjagaan udara bertujuan untuk menyelesaikan kawalan pintar suhu, kelembapan dan udara di seluruh rumah",
+    "air_care_helps_1": "1.Penilaian Udara",
+    "air_care_helps_1_content": "Pantau status suhu dan kelembapan setiap bilik dalam masa nyata, dan berikan penilaian keselesaan dan peringatan berdasarkan keadaan udara",
+    "air_care_helps_2": "2. Pengoptimuman satu klik",
+    "air_care_helps_2_content": "Pengoptimuman boleh dimulakan dengan satu klik. Kami menyediakan lima skim pengoptimuman yang berbeza. Setiap mod pengoptimuman boleh dilaraskan mengikut keperluan pengguna, memberikan pengguna penyelesaian pengoptimuman tersuai.",
+    "air_care_helps_3": "Pemandangan Bilik 3.3D",
+    "air_care_helps_3_content": "Pantau status dan peralatan bilik anda melalui visualisasi 3D terperinci rumah anda.",
+    "smart_laundry_key": "Cucian Pintar",
+    "smart_laundry_helps": "Smart Laundry menawarkan petua mencuci pakar, pembantu dobi yang intuitif dan pengurusan detergen yang lancar, memastikan pengalaman dobi yang tiada tandingan",
+    "smart_laundry_helps_1": "1. Cucian Tersuai",
+    "smart_laundry_helps_1_content": "Kitaran diperibadikan berdasarkan profil dan pilihan pengguna, dengan tag untuk musim yang berbeza, aktiviti luar, penjagaan bayi dan banyak lagi.",
+    "smart_laundry_helps_2": "2.Pengurusan Detergen",
+    "smart_laundry_helps_2_content": "Optimumkan rutin cucian anda dengan Pembantu Cucian Rumah Pintar, kenal pasti jenama detergen secara automatik dan uruskan dos dalam mesin basuh anda.",
+    "smart_laundry_helps_3": "3.Laporan Penggunaan Dobi",
+    "smart_laundry_helps_3_content": "Memaparkan laporan mingguan, bulanan dan tahunan tentang penggunaan program dobi oleh pengguna, serta penggunaan air dan elektrik dan pembersihan dram bulan.",
+    "smart_kitchen_key": "Dapur Pintar",
+    "smart_kitchen_helps": "Dapur Pintar memberi anda pengalaman memasak pintar yang belum pernah berlaku sebelum ini, termasuk resipi pintar, gandingan wain, pembantu resipi dan pengurusan ramuan, wain dan minuman",
+    "smart_kitchen_helps_1": "1. Resipi chef",
+    "smart_kitchen_helps_1_content": "Alami resipi induk dalam perisa unik apabila dimasak dalam ketuhar yang berbeza, yang mengikut arahan memasak resipi dengan hanya satu klik.",
+    "smart_kitchen_helps_2": "2.Pembantu Resipi",
+    "smart_kitchen_helps_2_content": "Sesuaikan dan jana resipi berdasarkan pilihan peribadi anda termasuk pemakanan, masakan, gaya hidup dan alahan.",
+    "smart_kitchen_helps_3": "3.Pengurusan Makanan",
+    "smart_kitchen_helps_3_content": "Tambah dan lihat butiran bahan yang kerap digunakan seperti tarikh luput. Padankan dengan pantas resipi makanan yang sesuai dan hantar bahan yang hilang ke senarai beli-belah.",
+    "smart_kitchen_helps_4": "Pengurusan Minuman",
+    "smart_kitchen_helps_4_content": "Tambah minuman dan buat senarai minuman, lihat maklumat terperinci bagi setiap minuman yang disimpan.",
+    "smart_kitchen_helps_5": "Inventori Wain",
+    "smart_kitchen_helps_5_content": "Imbas untuk membuat senarai bilik bawah tanah wain oleh VIvino, tetapkan peringatan untuk tempoh minum yang optimum dan cadangkan gandingan makanan berdasarkan jenis wain.",
+    "smart_kitchen_helps_6": "6. Senarai Membeli-belah",
+    "smart_kitchen_helps_6_content": "Hasilkan senarai beli-belah berdasarkan resipi, tandakan item yang anda sudah miliki dan peroleh sebagai rujukan beli-belah anda.",
+    "smart_support_key": "Sokongan Pintar",
+    "smart_support_helps": "Sokongan Pintar menyediakan bantuan komprehensif untuk peranti anda. Anda boleh mendapatkan petua pembersihan dan penjagaan untuk penyelenggaraan harian, diagnostik kendiri satu klik untuk menyemak status semua peranti anda dan menyediakan penyelesaian yang mungkin untuk sebarang operasi yang tidak normal",
+    "smart_support_helps_1": "1.Petua Pembersihan dan Penyelenggaraan",
+    "smart_support_helps_1_content": "Berikan cadangan untuk pembersihan dan penyelenggaraan harian produk.",
+    "smart_support_helps_2": "2.Dignosis diri satu klik",
+    "smart_support_helps_2_content": "Pemeriksaan kendiri satu klik untuk memahami status semua peralatan rumah. Apabila masalah dikesan, berikan penyelesaian yang disyorkan.",
+    "smart_support_helps_3": "Penyelesaian masalah",
+    "smart_support_helps_3_content": "Apabila peranti menghadapi masalah, pengguna boleh menolong diri sendiri, menyelesaikan masalah dan menyelesaikan masalah mengikut panduan kesalahan.",
+    "smart_support_helps_4": "4. Laporkan Isu",
+    "smart_support_helps_4_content": "Jika terdapat masalah dengan APP atau penggunaan produk, pengguna boleh maklum balas dalam talian untuk mengurangkan masa komunikasi dengan pusat panggilan.",
+    "smart_support_helps_5": "5.Hubungi Kami",
+    "smart_support_helps_5_content": "Pengguna boleh menghubungi kami melalui telefon, e-mel dan tapak web rasmi.",
+    "block_key": "Sekat",
+    "guide_tips_device_1": "Ini ialah <b> tab halaman utama baharu. </b>",
+    "guide_tips_device_2": "Anda boleh mengklik \" : \" untuk mengedit pesanan, menunjukkan atau menyembunyikan.",
+    "guide_tips_device_3": "Anda boleh menekan lama kad untuk memadam atau mengeditnya.",
+    "guide_tips_device_4": "Anda boleh mengalami <b> kad senario tersuai. </b>",
+    "guide_tips_device_5": "Anda boleh menemui tetapan tab rumah di <b> menyesuaikan penampilan </b> pada halaman menu",
+    "guide_tips_1": "ConnectLife telah melancarkan <b> lima senario. </b>",
+    "guide_tips_2": "Anda boleh mengklik \":\" untuk mengedit susunan bahagian",
+    "guide_tips_3": "Anda boleh menyeret \"=\" untuk menukar susunan bahagian pada halaman utama.",
+    "c_your_device": "Sambungkan\nperanti anda",
+    "a_ex_new_way": "dan mengalami cara hidup pintar yang baharu.",
+    "my_place": "tempat saya",
+    "home_tab": "Tab Halaman Utama",
+    "home_tab_content": "Tunjukkan atau sembunyikan tab senario di bahagian atas halaman utama",
+    "CL_DV_RF_extras": "Tambahan",
+    "CL_DV_OV_celsius_o_grill_plate": "PLAT GRIL CELSIUS°",
+    "CL_DV_OV_celsius_o_grill_plate_desc": "Plat gril Celsius° membolehkan untuk memanggang daging, sayur-sayuran dan ikan dengan sempurna. Tetapkan keamatan pilihan anda untuk kawalan tepat ke atas tekstur dan rasa.",
+    "CL_DV_WM_no_drain": "Tiada longkang",
+    "CL_DV_WM_minimum_rpm": "rpm minimum",
+    "CL_DV_WM_medium_rpm": "rpm sederhana",
+    "CL_DV_WM_maximum_rpm": "rpm maksimum",
+    "CL_CF_CS_connect_to_wifi": "Ikuti langkah ini untuk menyambungkan peranti ke Wi-Fi. Kami mengesyorkan untuk melumpuhkan data rangkaian pada telefon pintar anda."
 }
