--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4158,7 +4158,7 @@
     "CL_DV_WM_autodoes_tip": "Schakel deze functie in, dan doseert uw apparaat op een slimme manier wasmiddel en wasverzachter terwijl u de was doet.",
     "CL_DV_WM_detergent_department_key": "WASMIDDELCOMPARTIMENT",
     "CL_DV_WM_Dosage_Amount_key": "Dosering Hoeveelheid",
-    "CL_DV_WM_softener_department_key": "WATERVERZACHTERCOMPARTIMENT",
+    "CL_DV_WM_softener_department_key": "Wasverz. Reservoir",
     "CL_DV_WM_auto_does_with_detergent": "Autodoseren met wasmiddel",
     "CL_DV_WM_same_detergent": "Zelfde wasmiddel",
     "CL_DV_WM_normal_dosage_weight_tip": "Normale dosering: 4~5 kg kledinggewicht.",
@@ -4438,5 +4438,94 @@
     "CL_DV_OV_night_mode_setting_desc": "Gebruik de nachtmodus om de helderheid van het scherm van de wijnkast te verminderen en/of het licht in de kast te wijzigen.",
     "CL_DV_OV_door_lock_setting_desc": "Als u de deurvergrendeling inschakelt, wordt de deur van uw oven vergrendeld.",
     "CL_CF_FM_one_day_left": "Nog 1 dag",
-    "CL_CF_FM_x_item_selected": "*** item geselecteerd"
+    "CL_CF_FM_x_item_selected": "*** item geselecteerd",
+    "CL_SL_CM_progam_send_warning": "Helaas kan het programma niet verzenden. Schakel uw apparaat in, open de afstandsbediening en probeer het opnieuw.",
+    "CL_SL_CM_progam_start_warning": "Helaas kan het programma niet starten. Schakel uw apparaat in, open de afstandsbediening en probeer het opnieuw.",
+    "CL_SL_CM_progam_sent_successfully": "Programma succesvol verzonden!",
+    "CL_SL_CM_select_device_desc": "Selecteer het apparaat dat u wilt gebruiken.",
+    "CL_DV_WM_Detergent_In_Use_key": "Wasmiddel in gebruik",
+    "CL_DV_RF_cleaning_mode": "Reinigingsmodus",
+    "CL_DV_RF_holiday_mode": "Vakantiemodus",
+    "CL_DV_RF_party_mode": "Feestmodus",
+    "w_i_connect_scenario": "Wat is het ConnectLife-scenario?",
+    "w_i_smart_energy": "Wat is slimme energie?",
+    "smart_energy_l_m": "Leer meer over de belangrijkste kenmerken van Smart Energy",
+    "w_i_air_care": "Wat is luchtverzorging?",
+    "air_care_l_m": "Leer meer over de belangrijkste kenmerken van Air Care",
+    "w_i_smart_laundry": "Wat is Smart Laundry?",
+    "smart_laundry_l_m": "Leer meer over de belangrijkste kenmerken van Smart Laundry",
+    "w_i_smart_kitchen": "Wat is Smart Kitchen?",
+    "smart_kitchen_l_m": "Leer meer over de belangrijkste kenmerken van Smart Kitchen",
+    "w_i_smart_support": "Wat is Smart Support?",
+    "smart_support_l_m": "Leer meer over de belangrijkste functies van Smart Support",
+    "smart_energy_helps": "Smart Energy helpt u apparaten te monitoren en energiezuinig te houden",
+    "smart_energy_helps_1": "1.Eco met één klik",
+    "smart_energy_helps_1_content": "Actieve ECO-modus van uw apparaten. Analyseer statistisch het energieverbruik van het apparaat. Controleer energiebesparingsgegevens en stel een energiegebruiksdoel in.",
+    "smart_energy_helps_2": "2. Energieverbruiksbewaking",
+    "smart_energy_helps_2_content": "Bereken het totale stroom- en waterverbruik van uw huis op dag-, maand- en jaarbasis. U kunt ook de verbruiksstatistieken van afzonderlijke apparaten bekijken, het aandeel energieverbruik van elk apparaat binnen de geselecteerde periode, en het totale en afzonderlijke energieverbruik.",
+    "smart_energy_helps_3": "3. Energie-assistent",
+    "smart_energy_helps_3_content": "Stel doelen voor energiebesparing in en stuur meldingen naar gebruikers wanneer de ingestelde doelwaarden zijn bereikt.",
+    "air_care_helps": "Luchtverzorging is gericht op het intelligent regelen van temperatuur, vochtigheid en lucht in het hele huis",
+    "air_care_helps_1": "1. Luchtevaluatie",
+    "air_care_helps_1_content": "Controleer de temperatuur en vochtigheidsstatus van elke kamer in realtime en geef comfortbeoordelingen en herinneringen op basis van de airconditioningconditie",
+    "air_care_helps_2": "2. Optimalisatie met één klik",
+    "air_care_helps_2_content": "Optimalisatie kan met één klik worden gestart. Wij bieden vijf verschillende optimalisatieschema's. Elke optimalisatiemodus kan worden aangepast aan de behoeften van de gebruiker, waardoor gebruikers aangepaste optimalisatieoplossingen krijgen.",
+    "air_care_helps_3": "3.3D kamerweergave",
+    "air_care_helps_3_content": "Houd de status van uw kamer en apparaten in de gaten via een gedetailleerde 3D-visualisatie van uw huis.",
+    "smart_laundry_key": "Slimme was",
+    "smart_laundry_helps": "Smart Laundry biedt deskundige wastips, een intuïtieve wasassistent en naadloos wasmiddelbeheer, wat zorgt voor een ongeëvenaarde waservaring",
+    "smart_laundry_helps_1": "1. Aangepaste wasruimte",
+    "smart_laundry_helps_1_content": "Gepersonaliseerde cycli op basis van gebruikersprofielen en voorkeuren, met tags voor verschillende seizoenen, buitenactiviteiten, babyverzorging en meer.",
+    "smart_laundry_helps_2": "2. Wasmiddelbeheer",
+    "smart_laundry_helps_2_content": "Optimaliseer uw wasroutine met Smart Home Laundry Assistant, die automatisch wasmiddelmerken herkent en de dosering in uw wasmachine beheert.",
+    "smart_laundry_helps_3": "3. Rapport over wasgebruik",
+    "smart_laundry_helps_3_content": "Geeft wekelijkse, maandelijkse en jaarlijkse rapporten weer over het gebruik van het wasprogramma door de gebruiker, evenals het water- en elektriciteitsverbruik en de trommelreiniging van de maand.",
+    "smart_kitchen_key": "Slimme keuken",
+    "smart_kitchen_helps": "Smart Kitchen biedt u een ongekende intelligente kookervaring, inclusief intelligente recepten, wijncombinaties, receptassistenten en beheer van ingrediënten, wijn en dranken",
+    "smart_kitchen_helps_1": "1. Chef-recept",
+    "smart_kitchen_helps_1_content": "Ervaar de unieke smaken van meesterrecepten bereid in verschillende ovens, waarbij u met één klik de kookinstructies van het recept volgt.",
+    "smart_kitchen_helps_2": "2.Receptenassistent",
+    "smart_kitchen_helps_2_content": "Pas recepten aan en genereer ze op basis van uw persoonlijke voorkeuren, zoals voeding, keuken, levensstijl en allergieën.",
+    "smart_kitchen_helps_3": "3. Voedselbeheer",
+    "smart_kitchen_helps_3_content": "Voeg veelgebruikte ingrediëntendetails toe en bekijk ze, zoals de houdbaarheidsdatum. Koppel snel geschikte voedselrecepten en stuur ontbrekende ingrediënten naar de boodschappenlijst.",
+    "smart_kitchen_helps_4": "Beheer drank",
+    "smart_kitchen_helps_4_content": "Voeg drankjes toe en maak een dranklijst. Bekijk gedetailleerde informatie over elk opgeslagen drankje.",
+    "smart_kitchen_helps_5": "Wijn lijst",
+    "smart_kitchen_helps_5_content": "Scan om een wijnkelderlijst van VIvino samen te stellen, stel herinneringen in voor de optimale drinkperiode en geef aanbevelingen voor bijpassende gerechten op basis van het type wijn.",
+    "smart_kitchen_helps_6": "6. Boodschappenlijstje",
+    "smart_kitchen_helps_6_content": "Maak een boodschappenlijstje op basis van het recept en markeer de artikelen die u al bezit en hebt aangeschaft als winkelreferentie.",
+    "smart_support_key": "Slimme ondersteuning",
+    "smart_support_helps": "Smart Support biedt uitgebreide assistentie voor uw apparaten. U kunt reinigings- en verzorgingstips krijgen voor dagelijks onderhoud, een one-click zelfdiagnose om de status van al uw apparaten te controleren en mogelijke oplossingen bieden voor abnormale handelingen",
+    "smart_support_helps_1": "1. Tips voor reiniging en onderhoud",
+    "smart_support_helps_1_content": "Geef suggesties voor de dagelijkse reiniging en het onderhoud van het product.",
+    "smart_support_helps_2": "2. Zelfdiagnose met één klik",
+    "smart_support_helps_2_content": "Zelfinspectie met één klik om de status van alle huishoudelijke apparaten te begrijpen. Wanneer een probleem wordt gedetecteerd, worden aanbevolen oplossingen geboden.",
+    "smart_support_helps_3": "Probleemoplossing",
+    "smart_support_helps_3_content": "Wanneer er een probleem met het apparaat is, kunnen gebruikers zelf het probleem oplossen met behulp van de handleiding voor het oplossen van problemen.",
+    "smart_support_helps_4": "4. Probleem melden",
+    "smart_support_helps_4_content": "Als er problemen zijn met de APP of het productgebruik, kunnen gebruikers online feedback geven om de communicatietijd met het callcenter te verkorten.",
+    "smart_support_helps_5": "5. Neem contact met ons op",
+    "smart_support_helps_5_content": "Gebruikers kunnen contact met ons opnemen via telefoon, e-mail en de officiële website.",
+    "block_key": "Blok",
+    "guide_tips_device_1": "Dit is het <b> nieuwe tabblad van de startpagina. </b>",
+    "guide_tips_device_2": "U kunt op \" : \" klikken om de volgorde te bewerken, weer te geven of te verbergen.",
+    "guide_tips_device_3": "U kunt de kaart lang ingedrukt houden om deze te verwijderen of te bewerken.",
+    "guide_tips_device_4": "U kunt <b> op maat gemaakte scenariokaarten </b> ervaren.",
+    "guide_tips_device_5": "De instelling voor het tabblad Start vindt u onder <b> Uiterlijk aanpassen </b> op de menupagina",
+    "guide_tips_1": "ConnectLife heeft <b> vijf scenario's gelanceerd. </b>",
+    "guide_tips_2": "U kunt op \":\" klikken om de volgorde van de secties te bewerken",
+    "guide_tips_3": "U kunt de \"=\" verslepen om de volgorde van de secties op de startpagina te wijzigen.",
+    "c_your_device": "Verbind\nuw apparaten",
+    "a_ex_new_way": "en ervaar een nieuwe manier van slim leven.",
+    "my_place": "Mijn plek",
+    "home_tab": "Startpagina tabblad",
+    "home_tab_content": "Toon of verberg het tabblad Scenario's bovenaan de startpagina",
+    "CL_DV_RF_extras": "Extra's",
+    "CL_DV_OV_celsius_o_grill_plate": "CELSIUS°-GRILLPLAAT",
+    "CL_DV_OV_celsius_o_grill_plate_desc": "De Celsius° grillplaat zorgt voor het perfect grillen van vlees, groenten en vis. Stel uw gewenste intensiteit in voor nauwkeurige controle over textuur en smaak.",
+    "CL_DV_WM_no_drain": "Geen afvoer",
+    "CL_DV_WM_minimum_rpm": "Minimaal toerental",
+    "CL_DV_WM_medium_rpm": "Gemiddeld toerental",
+    "CL_DV_WM_maximum_rpm": "Maximaal toerental",
+    "CL_CF_CS_connect_to_wifi": "Volg deze stappen om het apparaat met Wi-Fi te verbinden. We raden aan om netwerkgegevens op uw smartphone uit te schakelen."
 }
