--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4158,7 +4158,7 @@
     "CL_DV_WM_autodoes_tip": "Включите эту функцию, и ваше устройство будет автоматически дозировать моющее средство и кондиционер для белья, пока вы стираете.",
     "CL_DV_WM_detergent_department_key": "ОТСЕК ДЛЯ МОЮЩЕГО СРЕДСТВА",
     "CL_DV_WM_Dosage_Amount_key": "Дозировка Количество",
-    "CL_DV_WM_softener_department_key": "ОТДЕЛЕНИЕ ДЛЯ СМЯГЧИТЕЛЯ",
+    "CL_DV_WM_softener_department_key": "Отд. д/конд.",
     "CL_DV_WM_auto_does_with_detergent": "Автодозировка с моющим средством",
     "CL_DV_WM_same_detergent": "Тот же моющий препарат",
     "CL_DV_WM_normal_dosage_weight_tip": "Обычная дозировка: 4~5 кг веса одежды.",
@@ -4438,5 +4438,94 @@
     "CL_DV_OV_night_mode_setting_desc": "Уменьшите яркость экрана и/или освещение в течение запланированных ночных часов.",
     "CL_DV_OV_door_lock_setting_desc": "Включение блокировки дверцы заблокирует дверцу вашей духовки.",
     "CL_CF_FM_one_day_left": "Остался 1 день",
-    "CL_CF_FM_x_item_selected": "*** выбран элемент"
+    "CL_CF_FM_x_item_selected": "*** выбран элемент",
+    "CL_SL_CM_progam_send_warning": "Извините, программа не может отправить данные. Включите устройство, откройте пульт и повторите попытку.",
+    "CL_SL_CM_progam_start_warning": "Извините, программа не может запуститься. Включите устройство, откройте пульт дистанционного управления и повторите попытку.",
+    "CL_SL_CM_progam_sent_successfully": "Программа успешно отправлена!",
+    "CL_SL_CM_select_device_desc": "Выберите устройство, которое будет использоваться.",
+    "CL_DV_WM_Detergent_In_Use_key": "Моющее средство в использовании",
+    "CL_DV_RF_cleaning_mode": "Режим очистки",
+    "CL_DV_RF_holiday_mode": "Режим отпуска",
+    "CL_DV_RF_party_mode": "Режим вечеринки",
+    "w_i_connect_scenario": "Что такое сценарий ConnectLife?",
+    "w_i_smart_energy": "Что такое умная энергия",
+    "smart_energy_l_m": "Узнайте больше о ключевых функциях Smart Energy",
+    "w_i_air_care": "Что такое уход за воздухом?",
+    "air_care_l_m": "Узнайте больше о ключевых функциях Air Care",
+    "w_i_smart_laundry": "Что такое умная прачечная?",
+    "smart_laundry_l_m": "Узнайте больше о ключевых функциях Smart Laundry",
+    "w_i_smart_kitchen": "Что такое умная кухня",
+    "smart_kitchen_l_m": "Узнайте больше о ключевых функциях Smart Kitchen",
+    "w_i_smart_support": "Что такое Smart Support?",
+    "smart_support_l_m": "Узнайте больше о ключевых функциях Smart Support",
+    "smart_energy_helps": "Smart Energy помогает вам контролировать и поддерживать устройства в состоянии энергоэффективности.",
+    "smart_energy_helps_1": "1. Эко в один клик",
+    "smart_energy_helps_1_content": "Активируйте режим ECO для ваших приборов. Статистически анализируйте потребление энергии устройствами. Отслеживайте данные по экономии энергии и устанавливайте целевые показатели потребления энергии.",
+    "smart_energy_helps_2": "2. Мониторинг потребления энергии",
+    "smart_energy_helps_2_content": "Рассчитайте потребление электроэнергии и воды во всем доме за день, месяц и год. Вы также можете просмотреть статистику потребления отдельными устройствами, долю потребления энергии каждым устройством за выбранный период, общее и индивидуальное потребление энергии.",
+    "smart_energy_helps_3": "3.Энергетический помощник",
+    "smart_energy_helps_3_content": "Устанавливайте цели по экономии энергии и отправляйте уведомления пользователям при достижении установленных целевых значений.",
+    "air_care_helps": "Целью Air Care является решение интеллектуального управления температурой, влажностью и воздухом во всем доме.",
+    "air_care_helps_1": "1.Оценка воздуха",
+    "air_care_helps_1_content": "Контролируйте температуру и влажность в каждой комнате в режиме реального времени, а также предоставляйте оценки комфорта и напоминания на основе состояния воздуха.",
+    "air_care_helps_2": "2.Оптимизация в один клик",
+    "air_care_helps_2_content": "Оптимизацию можно запустить одним щелчком мыши. Мы предлагаем пять различных схем оптимизации. Каждый режим оптимизации можно настроить в соответствии с потребностями пользователя, предоставляя пользователям индивидуальные решения по оптимизации.",
+    "air_care_helps_3": "3.3D Вид комнаты",
+    "air_care_helps_3_content": "Следите за состоянием вашей комнаты и бытовой техники с помощью подробной 3D-визуализации вашего дома.",
+    "smart_laundry_key": "Умная прачечная",
+    "smart_laundry_helps": "Smart Laundry предлагает профессиональные советы по стирке, интуитивно понятного помощника по стирке и бесперебойное управление моющими средствами, гарантируя непревзойденный опыт стирки.",
+    "smart_laundry_helps_1": "1. Индивидуальная стирка",
+    "smart_laundry_helps_1_content": "Персонализированные циклы на основе профилей и предпочтений пользователей с тегами для разных сезонов, активного отдыха, ухода за детьми и многого другого.",
+    "smart_laundry_helps_2": "2.Управление моющими средствами",
+    "smart_laundry_helps_2_content": "Оптимизируйте процесс стирки с помощью Smart Home Laundry Assistant, который автоматически распознает марки моющих средств и управляет дозировкой в стиральной машине.",
+    "smart_laundry_helps_3": "3.Отчет об использовании прачечной",
+    "smart_laundry_helps_3_content": "Отображает еженедельные, ежемесячные и годовые отчеты об использовании пользователем программы стирки, а также данные о потреблении воды и электроэнергии за месяц и очистке барабана.",
+    "smart_kitchen_key": "Умная кухня",
+    "smart_kitchen_helps": "Smart Kitchen предоставляет вам беспрецедентный интеллектуальный опыт приготовления пищи, включая интеллектуальные рецепты, сочетания вин, помощников по рецептам, а также управление ингредиентами, вином и напитками.",
+    "smart_kitchen_helps_1": "1.Рецепт от шеф-повара",
+    "smart_kitchen_helps_1_content": "Попробуйте рецепты мастера с уникальными вкусами, приготовленные в разных печах, следуя инструкциям по приготовлению рецепта, всего одним щелчком мыши.",
+    "smart_kitchen_helps_2": "2. Помощник по рецептам",
+    "smart_kitchen_helps_2_content": "Создавайте и настраивайте рецепты на основе ваших личных предпочтений, включая питание, кухню, образ жизни и аллергии.",
+    "smart_kitchen_helps_3": "3.Управление продуктами питания",
+    "smart_kitchen_helps_3_content": "Добавьте и просмотрите часто используемые ингредиенты, такие как срок годности. Быстро сопоставьте подходящие рецепты еды и отправьте недостающие ингредиенты в список покупок.",
+    "smart_kitchen_helps_4": "Управление напитками",
+    "smart_kitchen_helps_4_content": "Добавьте напитки и создайте список выпивки, просматривайте подробную информацию о каждой сохраненной выпивке.",
+    "smart_kitchen_helps_5": "Коллекция вин",
+    "smart_kitchen_helps_5_content": "Сканируйте, чтобы создать список винных погребов от VIvino, установить напоминания об оптимальном времени употребления вина и рекомендовать сочетания блюд с определенным типом вина.",
+    "smart_kitchen_helps_6": "6.Список покупок",
+    "smart_kitchen_helps_6_content": "Составьте список покупок на основе рецепта, отметьте те товары, которые у вас уже есть и которые вы приобрели, в качестве ссылки на покупки.",
+    "smart_support_key": "Умная поддержка",
+    "smart_support_helps": "Smart Support предоставляет всестороннюю помощь для ваших устройств. Вы можете получить советы по очистке и уходу для ежедневного обслуживания, самодиагностику одним щелчком для проверки состояния всех ваших устройств и предоставить возможные решения для любых ненормальных операций",
+    "smart_support_helps_1": "1.Советы по чистке и обслуживанию",
+    "smart_support_helps_1_content": "Дайте рекомендации по ежедневной чистке и уходу за изделием.",
+    "smart_support_helps_2": "2.Самодиагностика в один клик",
+    "smart_support_helps_2_content": "Самопроверка одним щелчком мыши для понимания состояния всех бытовых приборов. При обнаружении проблемы предоставьте рекомендуемые решения.",
+    "smart_support_helps_3": "Поиск неисправностей",
+    "smart_support_helps_3_content": "При возникновении неполадок в работе устройства пользователи могут самостоятельно устранить неполадки, следуя руководству по устранению неисправностей.",
+    "smart_support_helps_4": "4.Сообщить о проблеме",
+    "smart_support_helps_4_content": "Если возникают проблемы с приложением или использованием продукта, пользователи могут оставить отзыв онлайн, что сокращает время общения с колл-центром.",
+    "smart_support_helps_5": "5.Свяжитесь с нами",
+    "smart_support_helps_5_content": "Пользователи могут связаться с нами по телефону, электронной почте и через официальный сайт.",
+    "block_key": "Блокировать",
+    "guide_tips_device_1": "Это <b> новая вкладка домашней страницы. </b>",
+    "guide_tips_device_2": "Вы можете нажать « : », чтобы изменить порядок, показать или скрыть.",
+    "guide_tips_device_3": "Вы можете долго нажимать на карту, чтобы удалить или отредактировать ее.",
+    "guide_tips_device_4": "Вы можете испытать <b> индивидуальные карты сценариев. </b>",
+    "guide_tips_device_5": "Настройки вкладки «Главная» можно найти в разделе <b> «Настроить внешний вид» </b> на странице меню.",
+    "guide_tips_1": "ConnectLife запустила <b> пять сценариев. </b>",
+    "guide_tips_2": "Вы можете нажать «:», чтобы изменить порядок разделов.",
+    "guide_tips_3": "Вы можете перетащить «=», чтобы изменить порядок разделов на главной странице.",
+    "c_your_device": "Подключить\nваши устройства",
+    "a_ex_new_way": "и испытайте новый способ умной жизни.",
+    "my_place": "Мое место",
+    "home_tab": "Вкладка «Домашняя страница»",
+    "home_tab_content": "Показать или скрыть вкладку сценариев в верхней части домашней страницы",
+    "CL_DV_RF_extras": "Дополнительные материалы",
+    "CL_DV_OV_celsius_o_grill_plate": "ПАНЕЛЬ ДЛЯ ГРИЛЯ CELSIUSº",
+    "CL_DV_OV_celsius_o_grill_plate_desc": "Пластина для гриля Celsius° позволяет идеально готовить мясо, овощи и рыбу на гриле. Установите предпочтительную интенсивность для точного контроля текстуры и вкуса.",
+    "CL_DV_WM_no_drain": "Нет стока",
+    "CL_DV_WM_minimum_rpm": "Минимальные обороты",
+    "CL_DV_WM_medium_rpm": "Средние обороты",
+    "CL_DV_WM_maximum_rpm": "Максимальные обороты в минуту",
+    "CL_CF_CS_connect_to_wifi": "Следуйте инструкциям, чтобы подключить прибор к сети Wi-Fi. Рекомендуется отключить сетевые данные на смартфоне."
 }
