--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4438,5 +4438,94 @@
     "CL_DV_OV_night_mode_setting_desc": "Смањите осветљеност екрана и/или светла током заказаних ноћних сати.",
     "CL_DV_OV_door_lock_setting_desc": "Укључивање закључавања врата ће закључати врата ваше пећнице.",
     "CL_CF_FM_one_day_left": "Још 1 дан",
-    "CL_CF_FM_x_item_selected": "*** ставка је изабрана"
+    "CL_CF_FM_x_item_selected": "*** ставка је изабрана",
+    "CL_SL_CM_progam_send_warning": "Жао нам је, програм не може да пошаље, укључите уређај и отворите даљински и покушајте поново.",
+    "CL_SL_CM_progam_start_warning": "Жао нам је, програм не може да се покрене, укључите уређај и отворите даљински и покушајте поново.",
+    "CL_SL_CM_progam_sent_successfully": "Програм је успешно послат!",
+    "CL_SL_CM_select_device_desc": "Молимо изаберите уређај који ћете користити.",
+    "CL_DV_WM_Detergent_In_Use_key": "Детерџент у употреби",
+    "CL_DV_RF_cleaning_mode": "Режим чишћења",
+    "CL_DV_RF_holiday_mode": "Режим одмора",
+    "CL_DV_RF_party_mode": "Режим забаве",
+    "w_i_connect_scenario": "Шта је сценарио ЦоннецтЛифе",
+    "w_i_smart_energy": "Шта је паметна енергија",
+    "smart_energy_l_m": "Сазнајте више о кључним карактеристикама Смарт Енерги",
+    "w_i_air_care": "Шта је Аир Царе",
+    "air_care_l_m": "Сазнајте више о кључним карактеристикама Аир Царе",
+    "w_i_smart_laundry": "Шта је Смарт Лаундри",
+    "smart_laundry_l_m": "Сазнајте више о кључним карактеристикама Смарт Лаундри",
+    "w_i_smart_kitchen": "Шта је паметна кухиња",
+    "smart_kitchen_l_m": "Сазнајте више о кључним карактеристикама паметне кухиње",
+    "w_i_smart_support": "Шта је паметна подршка",
+    "smart_support_l_m": "Сазнајте више о кључним карактеристикама Смарт Суппорт",
+    "smart_energy_helps": "Смарт Енерги вам помаже да надгледате и одржавате уређаје у енергетски ефикасном стању",
+    "smart_energy_helps_1": "1.Оне-Цлицк Ецо",
+    "smart_energy_helps_1_content": "Активни ЕЦО режим ваших уређаја. Статистички анализирајте потрошњу енергије уређаја. Пратите податке о уштеди енергије и поставите циљ за потрошњу енергије.",
+    "smart_energy_helps_2": "2. Мониторинг потрошње енергије",
+    "smart_energy_helps_2_content": "Израчунајте потрошњу струје и воде у целој кући на дневној, месечној и годишњој бази. такође можете погледати статистику потрошње појединих уређаја, пропорцију потрошње енергије сваког уређаја у одабраном периоду, укупну и појединачну потрошњу енергије.",
+    "smart_energy_helps_3": "3.Енерги Ассистант",
+    "smart_energy_helps_3_content": "Поставите циљеве за уштеду енергије и пошаљите обавештења корисницима када се достигну постављене циљне вредности.",
+    "air_care_helps": "Нега ваздуха има за циљ да реши интелигентну контролу температуре, влажности и ваздуха у целој кући",
+    "air_care_helps_1": "1.Аир Евалуатион",
+    "air_care_helps_1_content": "Пратите статус температуре и влажности у свакој просторији у реалном времену и обезбедите процену удобности и подсетнике на основу климатизације",
+    "air_care_helps_2": "2.Оптимизација једним кликом",
+    "air_care_helps_2_content": "Оптимизација се може покренути једним кликом. Нудимо пет различитих шема оптимизације. Сваки режим оптимизације се може подесити према потребама корисника, пружајући корисницима прилагођена решења за оптимизацију.",
+    "air_care_helps_3": "3.3Д поглед на собу",
+    "air_care_helps_3_content": "Пратите статус ваше собе и уређаја кроз детаљну 3Д визуализацију вашег дома.",
+    "smart_laundry_key": "Смарт Лаундри",
+    "smart_laundry_helps": "Смарт Лаундри нуди стручне савете за прање, интуитиван помоћник за прање веша и беспрекорно управљање детерџентом, обезбеђујући неупоредиво искуство прања веша",
+    "smart_laundry_helps_1": "1. Прилагођено веш",
+    "smart_laundry_helps_1_content": "Персонализовани циклуси засновани на корисничким профилима и преференцијама, са ознакама за различита годишња доба, активности на отвореном, негу беба и још много тога.",
+    "smart_laundry_helps_2": "2. Управљање детерџентом",
+    "smart_laundry_helps_2_content": "Оптимизујте своју рутину прања веша помоћу Смарт Хоме Лаундри Ассистант-а, аутоматски препознајте брендове детерџента и управљајте дозом у својој машини за прање веша.",
+    "smart_laundry_helps_3": "3. Извештај о коришћењу веша",
+    "smart_laundry_helps_3_content": "Приказује недељне, месечне и годишње извештаје о корисниковом коришћењу програма за прање веша, као и месечну потрошњу воде и струје и чишћење бубња.",
+    "smart_kitchen_key": "Смарт Китцхен",
+    "smart_kitchen_helps": "Смарт Китцхен вам пружа невиђено интелигентно искуство кувања, укључујући интелигентне рецепте, упаривање вина, помоћнике за рецепте и управљање састојцима, вином и напитцима",
+    "smart_kitchen_helps_1": "1.Цхеф рецепт",
+    "smart_kitchen_helps_1_content": "Искусите мајсторске рецепте у јединственим укусима када се кувају у различитим рернама, које прате упутства за кување у рецепту само једним кликом.",
+    "smart_kitchen_helps_2": "Асистент за рецепте",
+    "smart_kitchen_helps_2_content": "Прилагодите и креирајте рецепте на основу ваших личних преференција, укључујући исхрану, кухиње, начин живота и алергије.",
+    "smart_kitchen_helps_3": "3. Управљање храном",
+    "smart_kitchen_helps_3_content": "Додајте и прегледајте детаље о често коришћеним састојцима као што је датум истека. Брзо спојите одговарајуће рецепте за храну и пошаљите састојке који недостају на листу за куповину.",
+    "smart_kitchen_helps_4": "Управљање пићем",
+    "smart_kitchen_helps_4_content": "Додајте пића и направите листу пића, погледајте детаљне информације о сваком поједином похрањеном напитку.",
+    "smart_kitchen_helps_5": "Vino zaliha",
+    "smart_kitchen_helps_5_content": "Скенирајте да бисте креирали ВИвино листу винских подрума, поставите подсетнике за оптималан период пијења и препоручите упаривање хране на основу врсте вина.",
+    "smart_kitchen_helps_6": "Списак за куповину",
+    "smart_kitchen_helps_6_content": "Генеришите листу за куповину на основу рецепта, означите ставке које већ поседујете и које сте набавили као референцу за куповину.",
+    "smart_support_key": "Смарт Суппорт",
+    "smart_support_helps": "Смарт Суппорт пружа свеобухватну помоћ за ваше уређаје. Можете добити савете за чишћење и негу за свакодневно одржавање, самодијагностику једним кликом да бисте проверили статус свих својих уређаја и пружили могућа решења за све ненормалне операције",
+    "smart_support_helps_1": "1. Савети за чишћење и одржавање",
+    "smart_support_helps_1_content": "Дајте предлоге за свакодневно чишћење и одржавање производа.",
+    "smart_support_helps_2": "2.Сопствена дијагноза једним кликом",
+    "smart_support_helps_2_content": "Самопровера једним кликом да схватите статус свих кућних апарата. Када се открије проблем, пружите препоручена решења.",
+    "smart_support_helps_3": "Отклањање проблема",
+    "smart_support_helps_3_content": "Када уређај има проблем, корисници могу сами да помогну, отклоне и реше проблем у складу са водичем за грешке.",
+    "smart_support_helps_4": "4.Репорт Иссуе",
+    "smart_support_helps_4_content": "Ако постоје проблеми са употребом апликације или производа, корисници могу да поврате информације на мрежи како би скратили време комуникације са позивним центром.",
+    "smart_support_helps_5": "5.Контактирајте нас",
+    "smart_support_helps_5_content": "Корисници могу да нас контактирају путем телефона, е-поште и званичног сајта.",
+    "block_key": "Блокирај",
+    "guide_tips_device_1": "Ово је <b> картица нове почетне странице. </b>",
+    "guide_tips_device_2": "Можете кликнути на \" : \" да бисте уредили наруџбу, приказали или сакрили.",
+    "guide_tips_device_3": "Можете дуго притиснути картицу да бисте је избрисали или уредили.",
+    "guide_tips_device_4": "Можете искусити <b> прилагођене картице сценарија. </b>",
+    "guide_tips_device_5": "Подешавање почетне картице можете пронаћи на <b> прилагођавање изгледа </b> на страници менија",
+    "guide_tips_1": "ЦоннецтЛифе је покренуо <b> пет сценарија. </b>",
+    "guide_tips_2": "Можете да кликнете на „:“ да бисте изменили редослед секција",
+    "guide_tips_3": "Можете да превучете „=\" да промените редослед секција на почетној страници.",
+    "c_your_device": "Повежите\nваше уређаје",
+    "a_ex_new_way": "и доживите нови начина паметног живљења.",
+    "my_place": "Моје место",
+    "home_tab": "Картица Почетна страница",
+    "home_tab_content": "Прикажите или сакријте картицу сценарија на врху почетне странице",
+    "CL_DV_RF_extras": "Ектра'с",
+    "CL_DV_OV_celsius_o_grill_plate": "ЦЕЛЗИЈУС° ГРИЛ ПЛОЧА",
+    "CL_DV_OV_celsius_o_grill_plate_desc": "Грил плоча Целзијус° омогућава савршено печење меса, поврћа и рибе. Подесите жељени интензитет за прецизну контролу над текстуром и укусом.",
+    "CL_DV_WM_no_drain": "Нема одвода",
+    "CL_DV_WM_minimum_rpm": "Минимални рпм",
+    "CL_DV_WM_medium_rpm": "Средњи рпм",
+    "CL_DV_WM_maximum_rpm": "Макимум рпм",
+    "CL_CF_CS_connect_to_wifi": "Пратите ове кораке да бисте повезали уређај на Wi-Fi. Препоручујемо вам да искључите мобилне податке на вашем паметном телефону."
 }
